--- a/pom.xml
+++ b/pom.xml
@@ -27,5 +27,11 @@
 			<artifactId>spring-batch-test</artifactId>
 			<version>2.2.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.165</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
