--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
 			<artifactId>spring-batch-core</artifactId>
 			<version>2.2.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+		</dependency>
 		<!-- Provided -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
