--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.logger.org.dbunit=INFO
+log4j.logger.org.springframework=INFO
 
 #log4j.logger.org.hibernate.type=TRACE
 #log4j.logger.org.hibernate=DEBUG
